--- a/css/Style.css
+++ b/css/Style.css
@@ -1,30 +1,87 @@
-body{
-	color: black;
-	background: slategrey;
+body {
+	margin-bottom: 500px;
+  color: black;
+  background: slategrey;
 
-	font-family: arial, helvetica, sans-serif;
-	font-size:15px
+  font-family: arial, helvetica, sans-serif;
+  font-size: 15px;
 }
 
-.container{
-	width: 80%;
-	margin: auto;
+.container {
+  width: 80%;
+  margin: auto;
 }
 
+.box-1 {
+  background-color: rgb(51, 51, 51);
+  color: white;
+  border-right: 5px lightblue solid;
+  border-left: 5px lightblue solid;
 
-.box-1{
-	background-color: rgb(51, 51, 51);
+  padding: 10px;
+  margin-top: 20px 0px;
+}
+.box-1 h1 {
+  text-decoration: underline;
+  font-family: tahoma;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.box-2 {
+  border: 3px black dotted;
+  margin: 20px 0px;
+  padding: 2px;
+}
+
+.ui {
+  border: 1px black solid;
+  border-radius: 10px;
+}
+.ui h2 {
+  text-align: center;
+}
+
+.ui li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+a:hover {
+  color: blue;
+}
+
+.ui li {
+  padding-bottom: 8px;
+  border-bottom: dotted 1px;
+  list-style-image: url(../check.png/Webp.net-resizeimage.png);
+}
+
+.my-form{
+padding: 20px;
+}
+
+.form1{
+	padding-bottom: 15px;
+}
+
+.my-form label{
+	display: block;
+}
+
+.my-form input[type="text"], .my-form textarea{
+	padding: 8px;
+	width: 100%;
+}
+
+.button{
+	background-color: lightcyan;
+	padding: 10px 15px;
+}
+.button:hover{
+	background:lightcoral;
 	color: white;
-	border-right: 5px lightblue solid;
-	border-left: 5px lightblue solid;
-
-	padding: 10px;
-	margin-top: 20px 0px;
-
-}
-.box-1 h1{
-	text-decoration:underline;
-	font-family:tahoma;
-	font-weight:800;
-	text-transform: uppercase;
 }
