--- a/css/Style.css
+++ b/css/Style.css
@@ -12,6 +12,10 @@ body {
   margin: auto;
 }
 
+.clr{
+	clear: both;
+}
+
 .box-1 {
   background-color: rgb(51, 51, 51);
   color: white;
@@ -57,7 +61,7 @@ a:hover {
 .ui li {
   padding-bottom: 8px;
   border-bottom: dotted 1px;
-  list-style-image: url(../check.png/Webp.net-resizeimage.png);
+  list-style-image: url(../Images/Webp.net-resizeimage.png);
 }
 
 .my-form{
@@ -84,4 +88,60 @@ padding: 20px;
 .button:hover{
 	background:lightcoral;
 	color: white;
+}
+
+.block{
+	float:left;
+	width: 33.3%;
+	border: 1px solid black;
+	padding: 10px;
+	box-sizing: border-box;
+}
+#main-block{
+	float:left;
+	width: 70%;
+	padding: 15px;
+	box-sizing: border-box;
+}
+#sidebar{
+	float: right;
+	width: 30%;
+	background-color: lightgray;
+	color: black;
+	padding: 15px;
+	box-sizing: border-box;
+}
+.p-box{
+	width: 800px;
+	height: 500px;
+	border: 1px solid black;
+	margin-top: 30px;
+	position: relative;
+
+}
+.p-box h1{
+	position: absolute;
+	top: 40px;
+	left: 25px;
+}
+.p-box h2{
+	position: absolute;
+	bottom: 40px;
+	right: 80px;
+}
+.fix-me{
+	position: fixed;
+	top: 400px;
+}
+.p-box{background-image: url('../Images/Lights.webp');
+	background-position: 100px 200px;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
+.my-list li:first-child{
+	background:  lightblue;
+}
+.my-list li:nth-child(even){
+	background: lightgreen;
 }
